--- a/TUR_Calculator-main 4/templates/electronics.html
+++ b/TUR_Calculator-main 4/templates/electronics.html
@@ -23,18 +23,18 @@
     <ul class="list" id="list">
       <!-- Görev #3 -->
       <li class="list__item">
-        <a href="{{Set the route}}">
+        <a href='{{lights + "/4" }}'>
           <img class="item__img" src="../static/img/battery.svg" alt="battery">
           <span>3-5 cihaz</span></a>
       </li>
       <li class="list__item">
-        <a href="{{Set the route}}">
+        <a href='{{lights + "/9" }}'> 
           <img class="item__img" src="../static/img/battery.svg" alt="battery">
           <span>6-8 cihaz</span></a>
       </li>
       <li class="list__item">
-        <a href="{{Set the route}}">
-          <img class="item__img" src="../static/img/battery.svg" alt="battery">
+      <a href='{{lights + "/11" }}'>
+        <img class="item__img" src="../static/img/battery.svg" alt="battery">
           <span>10+ cihaz</span></a>
       </li>
       <!--  -->
